# Justanotherchatbot

./: .env.example  .gitignore  CODING_MASTERPROMPT.md  README.md  RELEASE_NOTES.md  debug_start.ps1  debug_stop.ps1  deploy.bat  docker-compose.searxng.yml  pyproject.toml  stop.bat
config/: autonomy.yaml  memory.yaml  model.yaml  onebot.yaml  persona.yaml  provider.yaml  qq.yaml  web.yaml
docker/searxng/: settings.yml
personality/instruction/: README.md  distillation_agent_handoff.md  manual_profile_edits.md  qa_and_smoke.md  runtime_and_encoding_hygiene.md  style_distillation.md  token_budget_and_compression.md
personality/nanato/: nanato_world_character_expansion.md
personality/nanato/memory/: README.md  capabilities.md  contacts.md  context.md  long_term.md  (+3 more)
scripts/: _bootstrap.py  download_model.py  hardware_diagnostics.py  model_smoke.py  qq_probe.py  remote_debug_proxy.py  runtime_processes.ps1
src/local_qq_agent/: config.py  paths.py
tests/: test_agent_commands.py  test_agent_flow.py  test_agent_loop.py  test_config.py  test_debug_chat.py  test_debug_timeline.py  test_engagement.py  test_instance_guard.py  test_interaction.py  test_math_tool.py  test_memory_capture.py  test_memory_store.py  test_model_profiles.py  test_onebot_agent_loop.py  test_onebot_gateway.py  test_onebot_transport_ledger.py  test_persona_guard.py  test_persona_reload.py  test_provider_runtime.py  test_qq_adapter.py  test_reboot.py  test_run_log.py  test_runtime_processes.py  test_social_state.py  test_style_learning.py  test_turn_ledger.py  test_turns.py  test_web_research.py
(+63 files in other folders)
