[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-qq-agent"
version = "0.1.0"
description = "Local model QQ persona agent demo with memory, web search, and debug UI."
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "PyYAML>=6.0",
    "huggingface-hub>=0.24",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "pillow>=10.4",
    "pyperclip>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
browser = [
    "playwright>=1.45",
]
llama = [
    "llama-cpp-python[server]>=0.2.90",
]
ocr = [
    "pytesseract>=0.3.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
